# semka

./: CODE_OF_CONDUCT  Cargo.toml
app/: Cargo.toml  Makefile.toml
app/scripts/: publish.sh  upload.sh
app/src/: lib.rs
app/static/: index.html  site_manifest.json
app/static/_doc/css_splendor/: doc_manifest.json
app/static/_doc/foo/: doc_manifest.json  text.md
app/static/_doc/index/: doc_manifest.json  text.md
app/static/index/foo/: index.html
app/static/~/_app/: index.html
core/: Cargo.toml  Makefile.toml
core/src/: app.rs  builtin_widgets.rs  constants.rs  context.rs  document.rs  error.rs  lib.rs  manifests.rs  node_ext.rs  path.rs  register.rs  registry.rs  utils.rs  widget.rs
core/src/app/: about.rs  browse.rs  edit.rs
core/src/builtin_widgets/: failed.rs  loading.rs
core/src/context/: registry.rs
core/src/widget/: dependencies.rs  orders.rs
semka/: Cargo.toml  Makefile.toml  README.md  index.html
semka/src/: app.rs  context.rs  error.rs  lib.rs  page.rs  path.rs
semka/static/~/: manifest.json  site_manifest.json
semka/static/~/_app/: index.html
widgets/: Cargo.toml
widgets/src/: lib.rs  markdown.rs  stylesheet.rs  utils.rs
