[package]
version = "0.1.0"
name = "semka"
repository = "https://github.com/akhilman/semka"
authors = ["Ildar Akhmetgaleev <akhilman@gmail.com>"]
description = "App Description"
categories = ["category"]
license = "MIT"
readme = "./README.md"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[dependencies]
seed = { git = "https://github.com/seed-rs/seed" }
semka-core = { path = "../core" }

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Os']
