[package]
version = "0.1.0"
name = "semka-core"
repository = "https://github.com/akhilman/semka"
authors = ["Ildar Akhmetgaleev <akhilman@gmail.com>"]
description = "App Description"
categories = ["category"]
license = "MIT"
readme = "./README.md"
edition = "2018"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[dependencies]
seed = { git = "https://github.com/seed-rs/seed" }
regex = "1.3.9"
lazy_static = "1.4.0"
itertools = "0.9.0"
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.56"
failure = "0.1.8"
failure_derive = "0.1.8"
futures = "0.3.5"
futures-util = "0.3.5"
