[package]
version = "0.1.0"
name = "semka-core"
repository = "https://github.com/akhilman/semka"
authors = ["Ildar Akhmetgaleev <akhilman@gmail.com>"]
description = "App Description"
categories = ["category"]
license = "MIT"
readme = "./README.md"
edition = "2018"

[features]
default = ["console_error_panic_hook"]

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[dependencies]
# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.5", optional = true }

seed = { git = "https://github.com/seed-rs/seed" }
regex = "1.3.9"
lazy_static = "1.4.0"
itertools = "0.9.0"
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.56"
failure = "0.1.8"
failure_derive = "0.1.8"
futures = "0.3.5"
futures-util = "0.3.5"
web-sys = { version = "0.3.41", features = ["DomException"] }
wasm-bindgen = "0.2.64"
bytes = "0.5.5"
enclose = "1.1.8"
derivative = "2.1.1"
