[package]
version = "0.1.0"
name = "semka-widgets"
repository = "https://github.com/akhilman/semka"
authors = ["Ildar Akhmetgaleev <akhilman@gmail.com>"]
description = "App Description"
categories = ["category"]
license = "MIT"
readme = "./README.md"
edition = "2018"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[dependencies]
seed = { git = "https://github.com/seed-rs/seed" }
semka-core = { path = "../core" }
lazy_static = "1.4.0"
